WISH: anyevent mouse notification / manage MotionMask better.
DUMB: support tex fonts

	- overhaul of the transparency/pixmap code (sasha).
	- fix possible race betwen visual bell and poweron.
          (reported by Martin von Gagern, gentoo?).
        - rxvt -e no longer crashes the child.
        - fixed some minor memleaks on incorrect usage or
          missing DISPLAY.

8.3  Wed Aug  1 20:21:31 CEST 2007
	- new option: skipScroll/-ss, enabled by default.
        - go with the times and expect x11 library files in /usr/lib, not
          /usr/X11R6/lib.
	- initial transparency improvement/afterimage support
          patch by Sasha Vasko.
        - add urgentOnBell resource to set the urgency hint
          (patch by Philip Paeps).
        - do not process focus events caused by grabs
          (patch by Mikachu).
        - add iso14755_52 resource to disable iso14755 5.2 (exg).
        - add binding for backspace in iso14755 5.1 to remove the last
          digit (exg).
        - better option handling, support more than 30 options (exg).
	- nuke reconf script, serves no purpose anymore.
	- fixed and documented matcher/on_user_command processing in matcher
	  extension (tpope).
	- compile out of the box on Solaris 10 (exg).
        - fix MappingNotify events (reported by Stephan Walter).
        - zero-initialise mwmhints, this seems to solve all sorts of minor
          problems.

8.2  Sat Feb 17 21:35:28 CET 2007
	- fix make depend in src/, reported by exg.
        - fixed typo in urxvt::GET_CUSTOM, causing the result to be wrong.
          (patch by Sergey Vlasov).
        - unbundled iom perl interface somewhat.
        - scrollbar-xterm now uses the selected scrollColor instead of fg
          (found by Aiviru).
        - disabled linux kernel bug workaround again: disabling it gives
          a 50% speed hit on affected machines, while enabling it gives
          a similar speed hit to screen, which is likely the more common